amp-conformance/Tests/4_Basic_Data_Elmnts/4_1_index/4_1_2_c/Negative/UnmatchedIndexRank/test.cpp
// Copyright (c) Microsoft
// All rights reserved
// Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License.
// You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
// THIS CODE IS PROVIDED *AS IS* BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING WITHOUT LIMITATION ANY IMPLIED WARRANTIES OR CONDITIONS OF TITLE, FITNESS FOR A PARTICULAR PURPOSE, MERCHANTABLITY OR NON-INFRINGEMENT.
// See the Apache Version 2.0 License for specific language governing permissions and limitations under the License.
/// <tags>P1</tags>
/// <summary>Tests that checks the copy constructing with an index of a different rank fails</summary>
//#Expects: Error: test.cpp\(19\) : error C2664

#include <amp.h>

void compile_only() {
    const int N = 3;
    concurrency::index<N> idx1(10, 11, 12);

    // Create a new index using copy contructor
    concurrency::index<N+1> idx2(idx1);
}

